fix(index): add anchor links to header, footer and modal. change path to images for visibility

--- a/scss/styles/blocks/_contact-us.scss
+++ b/scss/styles/blocks/_contact-us.scss
@@ -20,7 +20,7 @@
     translate: -50% -50%;
     height: calc(100% - var(--contactUsImageOffsetY) * 2);
     aspect-ratio: 1;
-    background: url('/scss/images/contact-us-bg.svg') center/contain no-repeat;
+    background: url('../images/contact-us-bg.svg') center/contain no-repeat;
 
     @include tablet {
       display: none;
